// Définition du service de gestion des employés

syntax = "proto3";

package manage_employees;

import "common.proto";

// ==================== SERVICE ====================
service EmployeesService {
  // CRUD Employees
  rpc GetEmployees(GetEmployeesRequest) returns (GetEmployeesResponse);
  rpc GetEmployee(GetEmployeeRequest) returns (EmployeeResponse);
  rpc CreateEmployee(CreateEmployeeRequest) returns (EmployeeResponse);
  rpc UpdateEmployee(UpdateEmployeeRequest) returns (EmployeeResponse);
  rpc DeleteEmployee(DeleteEmployeeRequest) returns (common.Status);
  rpc DeactivateEmployee(DeactivateEmployeeRequest) returns (EmployeeResponse);
  rpc ActivateEmployee(ActivateEmployeeRequest) returns (EmployeeResponse);
  
  // Recherches spécifiques
  rpc GetEmployeesByDepartment(GetEmployeesByDepartmentRequest) returns (GetEmployeesResponse);
  rpc GetEmployeeStats(GetEmployeeStatsRequest) returns (EmployeeStatsResponse);
  
  // // CRUD Departments
  // rpc GetDepartments(GetDepartmentsRequest) returns (GetDepartmentsResponse);
  // rpc GetDepartment(GetDepartmentRequest) returns (DepartmentResponse);
  // rpc CreateDepartment(CreateDepartmentRequest) returns (DepartmentResponse);
  // rpc UpdateDepartment(UpdateDepartmentRequest) returns (DepartmentResponse);
  // rpc DeleteDepartment(DeleteDepartmentRequest) returns (common.Status);
}

// ==================== SERVICE ====================
service DepartmentsService {
  // CRUD Departments
  rpc GetDepartments(GetDepartmentsRequest) returns (GetDepartmentsResponse);
  rpc GetDepartment(GetDepartmentRequest) returns (DepartmentResponse);
  rpc CreateDepartment(CreateDepartmentRequest) returns (DepartmentResponse);
  rpc UpdateDepartment(UpdateDepartmentRequest) returns (DepartmentResponse);
  rpc DeleteDepartment(DeleteDepartmentRequest) returns (common.Status);
}

// ==================== MESSAGES EMPLOYEES ====================

message GetEmployeesRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
  string department_id = 4;
  bool is_active = 5;
  string sort_by = 6;
  string sort_order = 7;
}

message GetEmployeesResponse {
  repeated EmployeeResponse data = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 total_pages = 5;
}

message GetEmployeeRequest {
  string id = 1;
}

message EmployeeResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string position = 6;
  string hire_date = 7;
  double salary = 8;
  bool is_active = 9;
  DepartmentResponse department = 10;
  string department_id = 11;
  string user_id = 12;
  string created_at = 13;
  string updated_at = 14;
}

message CreateEmployeeRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone = 4;
  string position = 5;
  string hire_date = 6;
  double salary = 7;
  string department_id = 8;
  string user_id = 9;
  string created_by = 10;
}

message UpdateEmployeeRequest {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string position = 6;
  string hire_date = 7;
  double salary = 8;
  bool is_active = 9;
  string department_id = 10;
  string updated_by = 11;
}

message DeleteEmployeeRequest {
  string id = 1;
  string deleted_by = 2;
}

message DeactivateEmployeeRequest {
  string id = 1;
  string deactivated_by = 2;
}

message ActivateEmployeeRequest {
  string id = 1;
  string activated_by = 2;
}

message GetEmployeesByDepartmentRequest {
  string department_id = 1;
}

message GetEmployeeStatsRequest {
  string id = 1;
}

message EmployeeStatsResponse {
  EmployeeInfo employee = 1;
  EmploymentInfo employment = 2;
}

message EmployeeInfo {
  string id = 1;
  string full_name = 2;
  string email = 3;
  string position = 4;
  string department = 5;
}

message EmploymentInfo {
  string hire_date = 1;
  int32 years_of_service = 2;
  int32 months_of_service = 3;
  bool is_active = 4;
}

// ==================== MESSAGES DEPARTMENTS ====================

message GetDepartmentsRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
  bool is_active = 4;
}

message GetDepartmentsResponse {
  repeated DepartmentResponse data = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 total_pages = 5;
}

message GetDepartmentRequest {
  string id = 1;
}

message DepartmentResponse {
  string id = 1;
  string code = 2;
  string name = 3;
  string description = 4;
  string manager_id = 5;
  bool is_active = 6;
  string created_at = 7;
  string updated_at = 8;
}

message CreateDepartmentRequest {
  string code = 1;
  string name = 2;
  string description = 3;
  string manager_id = 4;
}

message UpdateDepartmentRequest {
  string id = 1;
  string code = 2;
  string name = 3;
  string description = 4;
  string manager_id = 5;
  bool is_active = 6;
}

message DeleteDepartmentRequest {
  string id = 1;
}